COMECO DO BACK END

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,229 +1,72 @@
-    <div class="container">
-        <div class="aside">
-            <div class="contentAside">
-                <div class="logo"><img src="images/spotifySvg.svg"></div>
-                <ul class="primaryMenu">
-                    <li><a href="#"><svg role="img" height="24" width="24" class="Svg-sc-1bi12j5-0 jgfuCe home-icon"
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M12.5 3.247a1 1 0 00-1 0L4 7.577V20h4.5v-6a1 1 0 011-1h5a1 1 0 011 1v6H20V7.577l-7.5-4.33zm-2-1.732a3 3 0 013 0l7.5 4.33a2 2 0 011 1.732V21a1 1 0 01-1 1h-6.5a1 1 0 01-1-1v-6h-3v6a1 1 0 01-1 1H3a1 1 0 01-1-1V7.577a2 2 0 011-1.732l7.5-4.33z">
-                                </path>
-                            </svg> <span class="textMenu">Início</span></a></li>
-                    <li><a href="#"><svg role="img" height="24" width="24" class="Svg-sc-1bi12j5-0 jgfuCe search-icon"
-                                viewBox="0 0 24 24">
-                                <path
-                                    d="M10.533 1.279c-5.18 0-9.407 4.14-9.407 9.279s4.226 9.279 9.407 9.279c2.234 0 4.29-.77 5.907-2.058l4.353 4.353a1 1 0 101.414-1.414l-4.344-4.344a9.157 9.157 0 002.077-5.816c0-5.14-4.226-9.28-9.407-9.28zm-7.407 9.279c0-4.006 3.302-7.28 7.407-7.28s7.407 3.274 7.407 7.28-3.302 7.279-7.407 7.279-7.407-3.273-7.407-7.28z">
-                                </path>
-                            </svg><span class="textMenu">Buscar</span></a></li>
-                    <li><a href="#"><svg role="img" height="24" width="24"
-                                class="Svg-sc-1bi12j5-0 jgfuCe collection-icon" viewBox="0 0 24 24">
-                                <path
-                                    d="M14.5 2.134a1 1 0 011 0l6 3.464a1 1 0 01.5.866V21a1 1 0 01-1 1h-6a1 1 0 01-1-1V3a1 1 0 01.5-.866zM16 4.732V20h4V7.041l-4-2.309zM3 22a1 1 0 01-1-1V3a1 1 0 012 0v18a1 1 0 01-1 1zm6 0a1 1 0 01-1-1V3a1 1 0 012 0v18a1 1 0 01-1 1z">
-                                </path>
-                            </svg><span class="textMenu">Sua Biblioteca</span></a></li>
-                </ul>
-
-                <ul class="secundaryMenu">
-                    <li><a href="#">
-                            <div class="menuItem"><svg style="padding:0" role="img" height="12" width="12"
-                                    aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
-                                    <path
-                                        d="M15.25 8a.75.75 0 01-.75.75H8.75v5.75a.75.75 0 01-1.5 0V8.75H1.5a.75.75 0 010-1.5h5.75V1.5a.75.75 0 011.5 0v5.75h5.75a.75.75 0 01.75.75z"
-                                        fill="#000"></path>
-                                </svg></div><span class="textMenu">Criar playlist</span>
-                        </a></li>
-                    <li><a href="#">
-                            <div class="menuItem maxOpacity" id="gradient"><svg role="img" height="12" width="12"
-                                    aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
-                                    <path
-                                        d="M15.724 4.22A4.313 4.313 0 0012.192.814a4.269 4.269 0 00-3.622 1.13.837.837 0 01-1.14 0 4.272 4.272 0 00-6.21 5.855l5.916 7.05a1.128 1.128 0 001.727 0l5.916-7.05a4.228 4.228 0 00.945-3.577z"
-                                        fill="#FFF"></path>
-                                </svg></div><span class="textMenu">Músicas curtidas</span>
-                        </a></li>
-                    <li><a href="#">
-                            <div class="menuItem maxOpacity" style="background-color: #006450;"><svg role="img"
-                                    height="12" width="12" aria-hidden="true" viewBox="0 0 16 16"
-                                    class="Svg-sc-1bi12j5-0 jgfuCe">
-                                    <path
-                                        d="M3.75 0A1.75 1.75 0 002 1.75v12.952c0 1.051 1.22 1.633 2.037.972l3.962-3.208 3.943 3.204c.817.663 2.038.082 2.038-.97V1.75A1.75 1.75 0 0012.23 0H3.75z"
-                                        fill="#1ED760"></path>
-                                </svg></div><span class="textMenu">Seus episódios</span>
-                        </a></li>
-                </ul>
-                <ul class="playlistMenu">
-                    <li><a href="#">eita meu filho calma</a></li>
-                    <li><a href="#">cavaloooo</a></li>
-                    <li><a href="#">eita meu filho calma</a></li>
-                    <li><a href="#">kkkkkkkkkkk</a></li>
-                    <li><a href="#">uiiiiiiiiii</a></li>
-                    <li><a href="#">kkkkkkkkk</a></li>
-                    <li><a href="#">kkkkkkkkk</a></li>
-                    <li><a href="#">kkkkkkkkk</a></li>
-                    <li><a href="#">kkkkkkkkk</a></li>
-                    <li><a href="#">kkkkkkkkk</a></li>
-                </ul>
-                <div class="installApp"><a href="#"><svg role="img" height="24" width="24" viewBox="0 0 24 24"
-                            class="Svg-sc-1bi12j5-0 jgfuCe">
-                            <path
-                                d="M12 3a9 9 0 100 18 9 9 0 000-18zM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12z">
-                            </path>
-                            <path
-                                d="M12 6.05a1 1 0 011 1v7.486l1.793-1.793a1 1 0 111.414 1.414L12 18.364l-4.207-4.207a1 1 0 111.414-1.414L11 14.536V7.05a1 1 0 011-1z">
-                            </path>
-                        </svg><span class="textMenu">Instalar aplicativo</span></a></div>
-            </div>
-
-        </div>
-        <div class="content">
-            <div class="menuBar">
-                <ul>
-                    <li><a href="#" class="arrow"><svg role="img" height="24" width="24"
-                                class="Svg-sc-1bi12j5-0 jgfuCe IYDlXmBmmUKHveMzIPCF" viewBox="0 0 24 24">
-                                <path
-                                    d="M15.957 2.793a1 1 0 010 1.414L8.164 12l7.793 7.793a1 1 0 11-1.414 1.414L5.336 12l9.207-9.207a1 1 0 011.414 0z">
-                                </path>
-                            </svg></a></li>
-                    <li><a href="#" class="arrow"><svg role="img" height="24" width="24"
-                                class="Svg-sc-1bi12j5-0 jgfuCe IYDlXmBmmUKHveMzIPCF" viewBox="0 0 24 24">
-                                <path
-                                    d="M8.043 2.793a1 1 0 000 1.414L15.836 12l-7.793 7.793a1 1 0 101.414 1.414L18.664 12 9.457 2.793a1 1 0 00-1.414 0z">
-                                </path>
-                            </svg></a></li>
-                </ul>
-                <div class="perfil">foto</div>
-            </div>
-            <div class="introduction">
-                <div class="menuItem subItem" id="gradient"><svg role="img" height="70" width="70" aria-hidden="true"
-                        viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
+<div class="container">
+    {{>aside}}
+</div>
+<div class="content">
+    <div class="menuBar">
+        <ul>
+            <li><a href="/" class="arrow"><svg role="img" height="24" width="24"
+                        class="Svg-sc-1bi12j5-0 jgfuCe IYDlXmBmmUKHveMzIPCF" viewBox="0 0 24 24">
                         <path
-                            d="M15.724 4.22A4.313 4.313 0 0012.192.814a4.269 4.269 0 00-3.622 1.13.837.837 0 01-1.14 0 4.272 4.272 0 00-6.21 5.855l5.916 7.05a1.128 1.128 0 001.727 0l5.916-7.05a4.228 4.228 0 00.945-3.577z"
-                            fill="#FFF"></path>
-                    </svg></div>
-                <div class="textDiv">
-                    <p class="textItem">Playlist</p>
-                    <p class="textItem">Músicas Curtidas</p>
-                    <p class="textItem">618 músicas</p>
-                </div>
-            </div>
-            <div class="list">
-                <div class="infos">
-                    <div class="pause">
-                        <svg width="110" height="110" viewBox="-1 0 67 66">
-                            <path
-                                d="M27.9,21h-3.7c-0.6,0-1.1,0.5-1.1,1.1v22.8c0,0.6,0.5,1.1,1.1,1.1h3.7c0.6,0,1.1-0.5,1.1-1.1V22.1 C29,21.5,28.5,21,27.9,21zM40.9,21h-3.7c-0.6,0-1.1,0.5-1.1,1.1v22.8c0,0.6,0.5,1.1,1.1,1.1h3.7c0.6,0,1.1-0.5,1.1-1.1V22.1 C42,21.5,41.5,21,40.9,21z">
+                            d="M15.957 2.793a1 1 0 010 1.414L8.164 12l7.793 7.793a1 1 0 11-1.414 1.414L5.336 12l9.207-9.207a1 1 0 011.414 0z">
+                        </path>
+                    </svg></a></li>
+            <li><a href="/create" class="arrow"><svg role="img" height="24" width="24"
+                        class="Svg-sc-1bi12j5-0 jgfuCe IYDlXmBmmUKHveMzIPCF" viewBox="0 0 24 24">
+                        <path
+                            d="M8.043 2.793a1 1 0 000 1.414L15.836 12l-7.793 7.793a1 1 0 101.414 1.414L18.664 12 9.457 2.793a1 1 0 00-1.414 0z">
+                        </path>
+                    </svg></a></li>
+        </ul>
+        <div class="perfil">foto</div>
+    </div>
+    <div class="introduction">
+        <div class="menuItem subItem" id="gradient"><svg role="img" height="70" width="70" aria-hidden="true"
+                viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
+                <path
+                    d="M15.724 4.22A4.313 4.313 0 0012.192.814a4.269 4.269 0 00-3.622 1.13.837.837 0 01-1.14 0 4.272 4.272 0 00-6.21 5.855l5.916 7.05a1.128 1.128 0 001.727 0l5.916-7.05a4.228 4.228 0 00.945-3.577z"
+                    fill="#FFF"></path>
+            </svg></div>
+        <div class="textDiv">
+            <p class="textItem">Playlist</p>
+            <p class="textItem">Músicas Curtidas</p>
+            <p class="textItem">618 músicas</p>
+        </div>
+    </div>
+    <div class="list">
+        <div class="infos">
+            <button class="pause">
+                <svg height="30" width="30" viewBox="0 0 24 24" class="playIcon">
+                    <path
+                        d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
+                    </path>
+                </svg>
+                <svg width="110" height="110" viewBox="-1 0 67 66" class="pauseIcon inactive">
+                    <path
+                        d="M27.9,21h-3.7c-0.6,0-1.1,0.5-1.1,1.1v22.8c0,0.6,0.5,1.1,1.1,1.1h3.7c0.6,0,1.1-0.5,1.1-1.1V22.1 C29,21.5,28.5,21,27.9,21zM40.9,21h-3.7c-0.6,0-1.1,0.5-1.1,1.1v22.8c0,0.6,0.5,1.1,1.1,1.1h3.7c0.6,0,1.1-0.5,1.1-1.1V22.1 C42,21.5,41.5,21,40.9,21z">
+                    </path>
+                </svg>
+            </button>
+        </div>
+        <div class="descriptionMusic">
+            <div class="line description">
+                <div class="box"><span style="margin-right: 2vh;">#</span>Título</div>
+                <div class="box">Álbum</div>
+                <div class="box last"><span>Adicionado em</span> <span><svg role="img" height="16" width="16"
+                            viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
+                            <path d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8z">
                             </path>
-                        </svg>
-                    </div>
-                </div>
-                    <div class="descriptionMusic">
-                        <div class="line description">
-                            <div class="box"><span style="margin-right: 2vh;">#</span>Título</div>
-                            <div class="box">Álbum</div>
-                            <div class="box last"><span>Adicionado em</span> <span><svg role="img" height="16"
-                                        width="16" viewBox="0 0 16 16" class="Svg-sc-1bi12j5-0 jgfuCe">
-                                        <path
-                                            d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8z">
-                                        </path>
-                                        <path
-                                            d="M8 3.25a.75.75 0 01.75.75v3.25H11a.75.75 0 010 1.5H7.25V4A.75.75 0 018 3.25z">
-                                        </path>
-                                    </svg></span></div>
-                        </div>
+                            <path d="M8 3.25a.75.75 0 01.75.75v3.25H11a.75.75 0 010 1.5H7.25V4A.75.75 0 018 3.25z">
+                            </path>
+                        </svg></span></div>
+            </div>
+                
+               {{#each mus}}
+                    {{>music title = title artist = artist album = album _id=_id}}
+                    
+               {{/each}}
 
-                        <div class="line item">
-                            <div class="box">
-                                <p class="numberMusic">1</p>
-                                <img src="images/heartSvg.png" class="logoMusic" width="40"/>
-                                <div class="titleMusic">
-                                    <p class="titleMusic">Quase acústico #3</p>
-                                    <p class="artistMusic">Matue</p>
-                                </div>
-                            </div>
-                            <div class="box"><span>Mnb Quase acústico</span></div>
-                            <div class="box last">
-                                <p>há 1 dia</p> 
-                                <p class="like"><span style="margin-right: 10px;"><svg role="img" height="16" width="16" viewBox="0 0 16 16"class="Svg-sc-1bi12j5-0 jgfuCe">
-                                        <path
-                                            d="M15.724 4.22A4.313 4.313 0 0012.192.814a4.269 4.269 0 00-3.622 1.13.837.837 0 01-1.14 0 4.272 4.272 0 00-6.21 5.855l5.916 7.05a1.128 1.128 0 001.727 0l5.916-7.05a4.228 4.228 0 00.945-3.577z">
-                                        </path>
-                                    </svg></span><span>2:37</span></p>
-                            </div>
-                        </div>
+               
+              
+            </div>
+        </div>
 
-                        <div class="line item">
-                            <div class="box">
-                                <p class="numberMusic">1</p>
-                                <img src="images/heartSvg.png" class="logoMusic" width="40"/>
-                                <div class="titleMusic">
-                                    <p class="titleMusic">Quase acústico #3</p>
-                                    <p class="artistMusic">Matue</p>
-                                </div>
-                            </div>
-                            <div class="box"><span>Mnb Quase acústico</span></div>
-                            <div class="box last">
-                                <p>há 1 dia</p> 
-                                <p class="like"><span style="margin-right: 10px;"><svg role="img" height="16" width="16" viewBox="0 0 16 16"class="Svg-sc-1bi12j5-0 jgfuCe">
-                                        <path
-                                            d="M15.724 4.22A4.313 4.313 0 0012.192.814a4.269 4.269 0 00-3.622 1.13.837.837 0 01-1.14 0 4.272 4.272 0 00-6.21 5.855l5.916 7.05a1.128 1.128 0 001.727 0l5.916-7.05a4.228 4.228 0 00.945-3.577z">
-                                        </path>
-                                    </svg></span><span>2:37</span></p>
-                            </div>
-                        </div>
-                        <div class="line item">
-                            <div class="box">
-                                <p class="numberMusic">1</p>
-                                <img src="images/heartSvg.png" class="logoMusic" width="40"/>
-                                <div class="titleMusic">
-                                    <p class="titleMusic">Quase acústico #3</p>
-                                    <p class="artistMusic">Matue</p>
-                                </div>
-                            </div>
-                            <div class="box"><span>Mnb Quase acústico</span></div>
-                            <div class="box last">
-                                <p>há 1 dia</p> 
-                                <p class="like"><span style="margin-right: 10px;"><svg role="img" height="16" width="16" viewBox="0 0 16 16"class="Svg-sc-1bi12j5-0 jgfuCe">
-                                        <path
-                                            d="M15.724 4.22A4.313 4.313 0 0012.192.814a4.269 4.269 0 00-3.622 1.13.837.837 0 01-1.14 0 4.272 4.272 0 00-6.21 5.855l5.916 7.05a1.128 1.128 0 001.727 0l5.916-7.05a4.228 4.228 0 00.945-3.577z">
-                                        </path>
-                                    </svg></span><span>2:37</span></p>
-                            </div>
-                        </div>
-                        <div class="line item">
-                            <div class="box">
-                                <p class="numberMusic">1</p>
-                                <img src="images/heartSvg.png" class="logoMusic" width="40"/>
-                                <div class="titleMusic">
-                                    <p class="titleMusic">Quase acústico #3</p>
-                                    <p class="artistMusic">Matue</p>
-                                </div>
-                            </div>
-                            <div class="box"><span>Mnb Quase acústico</span></div>
-                            <div class="box last">
-                                <p>há 1 dia</p> 
-                                <p class="like"><span style="margin-right: 10px;"><svg role="img" height="16" width="16" viewBox="0 0 16 16"class="Svg-sc-1bi12j5-0 jgfuCe">
-                                        <path
-                                            d="M15.724 4.22A4.313 4.313 0 0012.192.814a4.269 4.269 0 00-3.622 1.13.837.837 0 01-1.14 0 4.272 4.272 0 00-6.21 5.855l5.916 7.05a1.128 1.128 0 001.727 0l5.916-7.05a4.228 4.228 0 00.945-3.577z">
-                                        </path>
-                                    </svg></span><span>2:37</span></p>
-                            </div>
-                        </div>
-                        <div class="line item">
-                            <div class="box">
-                                <p class="numberMusic">1</p>
-                                <img src="images/heartSvg.png" class="logoMusic" width="40"/>
-                                <div class="titleMusic">
-                                    <p class="titleMusic">Quase acústicoOOOOO #3</p>
-                                    <p class="artistMusic">Matue</p>
-                                </div>
-                            </div>
-                            <div class="box"><span>Mnb Quase acústico</span></div>
-                            <div class="box last">
-                                <p>há 1 dia</p> 
-                                <p class="like"><span style="margin-right: 10px;"><svg role="img" height="16" width="16" viewBox="0 0 16 16"class="Svg-sc-1bi12j5-0 jgfuCe">
-                                        <path
-                                            d="M15.724 4.22A4.313 4.313 0 0012.192.814a4.269 4.269 0 00-3.622 1.13.837.837 0 01-1.14 0 4.272 4.272 0 00-6.21 5.855l5.916 7.05a1.128 1.128 0 001.727 0l5.916-7.05a4.228 4.228 0 00.945-3.577z">
-                                        </path>
-                                    </svg></span><span>2:37</span></p>
-                            </div>
-                        </div>
-                    </div>
