--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -189,6 +189,7 @@ body::-webkit-scrollbar {
 }
 
 .infos {
+    
     background: linear-gradient(180deg, rgba(48,34,94,1) 0%, rgb(22, 19, 33) 88%);
     padding: var(--contentLateral);
     padding-top: 3vh;
@@ -196,7 +197,7 @@ body::-webkit-scrollbar {
 
 
 .pause {
-    
+    border: none;
     background-color: var(--greenSpo);
     fill: var(--primaryColor);
     border-radius: 180px;
@@ -212,11 +213,13 @@ body::-webkit-scrollbar {
     padding: var(--contentSpace);
     text-transform: uppercase;
     font-family: Gotham-light;
+    padding-top: 5vh;
     padding-bottom: 1vh;
     border-bottom: 1px solid rgb(179, 179, 179,0.2);
 }
 
 .descriptionMusic {
+    min-height: 43.2vh;
     background: linear-gradient(180deg, rgb(22, 19, 33) 0%, rgba(18,18,18,1) 100%);
 }
 .last {
@@ -236,8 +239,13 @@ body::-webkit-scrollbar {
     font-family: Gotham-light;
     grid-template-columns: 1.5fr 1fr 1fr;
 }
+.like-duration {
+    display: flex;
+}
 .like {
     display: flex;
+    background-color: transparent;
+    border: 0;
 }
 
 .logoMusic {
@@ -254,4 +262,8 @@ body::-webkit-scrollbar {
     font-family: Gotham;
     color: var(--secundaryColor);
     font-size: 2.5vh;
+}
+
+.inactive {
+    display: none;
 }
