--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/1fb55aa623.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+
     <title>Spotify</title>
 </head>
 
 <body>
     {{{body}}}
+
+<script src="scripts/main.js"><{{!}}/script>
 </body>
 </html>
 
