--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <script src="https://kit.fontawesome.com/1fb55aa623.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 
@@ -13,7 +13,7 @@
 <body>
     {{{body}}}
 
-<script src="scripts/main.js"><{{!}}/script>
+<script src="scripts/main.js"><{{!}}</script>
 </body>
 </html>
 
